2022-04-19 Sam Harper
    * tag V03-03-00
	* added DAQ3 Val DB to the DB options
	* converter now adds ProcessAcceleratorCUDA to configs with release template >=12_3
	* python package updated to CMSSW_12_3_0
	* following names are now reserved: ProcessAcceleratorCUDA, HLTConfigVersion, schedule
	* global psets are now checked when considering name uniquenes and have name uniqueness enforced
	  on creation
	* smart renaming icon and menu entry now restored
	* now checks that the default column in the prescale service exists on menu save

2022-03-15 Sam Harper
    * tag V03-02-04
	* bug fix: dataset paths were not properly associated when migrating
	* paths in smartprescale tables for dataset paths are now ordered as they are in the dataset filter
	* paths are added to the dataset path are now alphabetical

2022-02-24 Sam Harper
    * tag V03-02-03
	* bug fix: redraw gui command now works (listener wasnt updated for name change)
	* paths in a dataset filter now explicily remain in the triggerConditions when prescaled to 0
	* prescales and smart prescales are now transfered over when doing the convert to path based

2022-02-24 Sam Harper
    * tag V03-02-02
	* bug fix: can now deep import paths which will have an object change type (ie module goes to switch producer)

2022-02-15 Sam Harper
    * tag V03-02-01
    * bug fix: standard paths can now have a trigger results filter if that trigger results filter has usePathStatus=True
	* dataset paths now are constrained to have their dataset path filter before their prescale module
	    * the reason for this is an individual fu can lock to only outputing on some instances of a split dataset if there is a prescale in the dataset path filter
		* eg say there its split into 4 paths and the dataset path filter simply has a prescale of 2
		   * event 1: passes path 0 prescale filter, dataset path filter count goes to 1, fails as 1%2!=0