@@ -1,3 +1,3 @@
-confdb.version=V03-03-00
+confdb.version=V03-04-00
 confdb.contact=sandro.ventura@cern.ch
 confdb.url=https://confdb.web.cern.ch/confdb/v3/
