@@ -1,3 +1,7 @@
+2022-05-19 Sam Harper
+    * tag V03-04-00
+	* for configs with release template >=12_4_0_pre4 Task is now renamed ConcurentTask in python
+
 2022-04-19 Sam Harper
     * tag V03-03-00
 	* added DAQ3 Val DB to the DB options
